[gd_scene load_steps=30 format=2]

[ext_resource path="res://Art Assets/SpriteSheets/timefantasy_characters/timefantasy_characters/sheets/chara4.png" type="Texture" id=1]
[ext_resource path="res://Envirmonment/Enemy/EnemyBoss.gd" type="Script" id=2]
[ext_resource path="res://DebugFont.tres" type="Theme" id=3]
[ext_resource path="res://Envirmonment/Enemy/AttackEffects.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 260, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 260, 180, 26, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 234, 216, 26, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 260, 216, 26, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 286, 216, 26, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 260, 216, 26, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 234, 252, 26, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 260, 252, 26, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 286, 252, 26, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 260, 252, 26, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 260, 252, 26, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 234, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 260, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 286, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 260, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 234, 180, 26, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 260, 180, 26, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 286, 180, 26, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 260, 180, 26, 36 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 260, 216, 26, 36 )

[sub_resource type="SpriteFrames" id=21]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "IdleDown",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "IdleLeft",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "WalkRight",
"speed": 6.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "WalkUp",
"speed": 6.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "IdleUp",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "WalkDown",
"speed": 6.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "WalkLeft",
"speed": 6.0
}, {
"frames": [ SubResource( 20 ) ],
"loop": true,
"name": "IdleRight",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=22]
radius = 13.0
height = 36.0

[sub_resource type="CircleShape2D" id=23]
radius = 45.0

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.266667, 0.266667, 0.266667, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="EnemyBoss" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CharacterAnimations" type="AnimatedSprite" parent="."]
position = Vector2( 2, -60 )
scale = Vector2( 4, 4 )
frames = SubResource( 21 )
animation = "IdleDown"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 22 )

[node name="MeleeRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
shape = SubResource( 23 )

[node name="Debug" type="Label" parent="."]
visible = false
margin_right = 111.0
margin_bottom = 59.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -50.0
margin_top = -130.0
margin_right = 50.0
margin_bottom = -115.0
custom_styles/fg = SubResource( 24 )
custom_styles/bg = SubResource( 25 )
value = 80.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackEffects" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -50 )
